#7 fix spring-javaformat:apply